--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@
 
 .job-card {
     background: white;
+    margin-inline:auto;
     padding: 25px;
     font-size: 18px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
